src/test/deca/syntax/invalid/sansobjet/Or1.deca
//Or1.deca:6:5: mismatched input '||' expecting {';', ',', '='}
//Test or en fin de noeud;
//
{
    int x;
     ||;
}
